--- a/views/pages/searches/new.ejs
+++ b/views/pages/searches/new.ejs
@@ -17,7 +17,7 @@
                 <option name="S2">Author</option>
                 <option name="S2">Title</option>
             </select>
-            <input type="text" name="mmd">
+            <input type="text" name="inputName">
             <button>Search</button>
         </form>
     </main>
