--- a/public/style/base.css
+++ b/public/style/base.css
@@ -1,9 +1,26 @@
 body {
-    background-color: aqua;
+  background-color: aqua;
 }
 
 #errorImage {
-    background-image: url(../imgs/undraw_page_not_found_su7k.png);
-    background-repeat: no-repeat;
-    background-size: cover;
+  background-image: url(../imgs/undraw_page_not_found_su7k.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+/* 
+  ##Device = Most of the Smartphones Mobiles (Portrait)
+  ##Screen = B/w 320px to 479px
+*/
+
+@media (min-width: 320px) and (max-width: 480px) {
+    
+}
+
+/* 
+  ##Device = Laptops, Desktops
+  ##Screen = B/w 1025px to 1280px
+*/
+
+@media (min-width: 1025px) and (max-width: 1280px) {
 }
