--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -9,6 +9,8 @@
 <body>
     <header>
         <h1>Books</h1>
+        <a href="/search/new">click me</a>
+        <a href="/searches">find books</a>
     </header>
     <main>
         
