--- a/views/pages/searches/new.ejs
+++ b/views/pages/searches/new.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <link rel="stylesheet" href="style/base.css">
     <title>Lookup books</title>
 </head>
 <body>
@@ -12,11 +12,10 @@
     </header>
     <main>
         <form action="/searches" method="post">
-            <!-- <input type="radio"> -->
-            <select>
-                <option name="S2">Author</option>
-                <option name="S2">Title</option>
-            </select>
+            <label for="title">Title</label>
+            <input type="radio" id="title" value="title" name="S2">
+            <label for="author">author</label>
+            <input type="radio" id="author" value="author" name="S2">
             <input type="text" name="inputName">
             <button>Search</button>
         </form>
