--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -3,20 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/reset.css">
     <link rel="stylesheet" href="style/base.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Book</title>
 </head>
 <body>
     <header>
-        <h1>Books</h1>
-        <a href="/search/new">click me</a>
-        <a href="/searches">find books</a>
+        <h1 class="h1-H">Books</h1>
+        <i id="burger" class="material-icons" onclick="burger()">menu</i>
+        <i id="quit" class="material-icons" onclick="quit()">clear</i>
+        <div id="links">
+            <a href="/search/new">Search</a>
+            <!-- <a href="">SecondPage</a> -->
+            <!-- <a href="">ThirdPage</a> -->
+        </div>
     </header>
     <main>
         
     </main>
-    <footer>
-
-    </footer>
+    <script src="js/book.js"></script>
 </body>
 </html>
