--- a/views/pages/searches/new.ejs
+++ b/views/pages/searches/new.ejs
@@ -3,12 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/base.css">
+    <link rel="stylesheet" href="style/reset.css" />
+    <link rel="stylesheet" href="style/base.css" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Lookup books</title>
 </head>
 <body>
     <header>
-        <h1>Find a book</h1>
+        <h1 class="h1-H">Find a book</h1>
+        <i id="burger" class="material-icons" onclick="burger()">menu</i>
+        <i id="quit" class="material-icons" onclick="quit()">clear</i>
+        <div id="links">
+            <a href="/search/new">Search</a>
+            <!-- <a href="">SecondPage</a> -->
+            <!-- <a href="">ThirdPage</a> -->
+        </div>
     </header>
     <main>
         <form action="/searches" method="post">
@@ -20,5 +29,6 @@
             <button>Search</button>
         </form>
     </main>
+    <script src="js/book.js"></script>
 </body>
 </html>
