--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -14,9 +14,8 @@
         <i id="burger" class="material-icons" onclick="burger()">menu</i>
         <i id="quit" class="material-icons" onclick="quit()">clear</i>
         <div id="links">
+            <a href="/">Home</a>
             <a href="/search/new">Search</a>
-            <!-- <a href="">SecondPage</a> -->
-            <!-- <a href="">ThirdPage</a> -->
         </div>
     </header>
     <main>
