--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,26 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/reset.css">
-    <link rel="stylesheet" href="styles/base.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <%- include('../layout/head')%>
     <title>Book</title>
 </head>
+
 <body>
     <header>
-        <h1 class="h1-H">Books</h1>
-        <i id="burger" class="material-icons" onclick="burger()">menu</i>
-        <i id="quit" class="material-icons" onclick="quit()">clear</i>
-        <div id="links">
-            <a href="/">Home</a>
-            <a href="/search/new">Search</a>
-        </div>
+        <%- include('../layout/header.ejs')%>
     </header>
     <main>
-        
+        <div>
+            <p>
+                <%= counter %>
+            </p>
+            <ul>
+                <% bookInfo.forEach(item=>{ %>
+                <li>
+                    <img src="<%= item.image_url %>">
+                </li>
+                <li>
+                    <%= item.title %>
+                </li>
+                <li>
+                    <%= item.author %>
+                </li>
+                <button><a href="/books/<%= item.id %>">View Details</a></button>
+                <% }); %>
+            </ul>
+        </div>
     </main>
     <script src="js/book.js"></script>
 </body>
+
 </html>
