--- a/views/layout/head.ejs
+++ b/views/layout/head.ejs
@@ -2,4 +2,5 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="/styles/reset.css">
 <link rel="stylesheet" href="/styles/base.css">
+<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
