--- a/views/pages/searches/show.ejs
+++ b/views/pages/searches/show.ejs
@@ -15,31 +15,35 @@
             <% bookDetails.forEach(item=>{ %>
             <li>
                 <img src="<%= item.thumnail %>">
-            </li>
-            <li>
+            
+            
                 <%= item.BookTitle %>
-            </li>
-            <li>
+            
+           
                 <%= item.AuthorName %>
-            </li>
-            <li>
+            
+            
                 <%= item.BookDescription %>
-            </li>
-            <li>
+            
+           
                 <%= item.ISBN %>
-            </li>
-            <li>
+            
+            
                 <%= item.Bookshell %>
-            </li>
-            <button id="viewButton">View</button>
-            <form action="" class="toggleForm">
-                <input type="text" value="<%= item.BookTitle %>">
-                <input type="text" value="<%= item.AuthorName %>">
-                <input type="text" value="<%= item.thumnail %>">
-                <input type="text" value="<%= item.ISBN %>">
-                <textarea><%= item.BookDescription %></textarea>
-                <input type="text" id="categoryInput">
+            
+            <button class="viewButton">View</button>
+            <form action="/books" class="toggleForm" method="post">
+                <input type="text" value="<%= item.BookTitle %>" name="bookTitle">
+                <input type="text" value="<%= item.AuthorName %>" name="author">
+                <input type="text" value="<%= item.thumnail %>"  name="thumnail">
+                <input type="text" value="<%= item.ISBN %>"  name="ISBN">
+                <textarea  name="description"><%= item.BookDescription %></textarea>
+                <input type="text" value="<%= item.Bookshell %>" name="bookshell">
+                <!-- <input type="text" value="<%= item.id %>" name="id"> -->
+
+                <button>Submit</button>
             </form>
+        </li>
             <% }); %>
         </ul>
     </main>
