--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -70,8 +70,13 @@
   main ul li {
     color: #f8f8f8;
   }
-  .toggleForm{
-    display: none;
-    /* visibility: hidden; */
-  }
+}
+
+.toggleForm{
+  display: none;
+  /* visibility: hidden; */
+}
+
+#updateForm{
+  display: none;
 }
