--- a/views/pages/searches/new.ejs
+++ b/views/pages/searches/new.ejs
@@ -11,7 +11,7 @@
         <%- include('../../layout/header.ejs')%>
     </header>
     <main>
-        <form action="/searches" method="post">
+        <form action="/searches" method="post" id="bookForm">
             <label for="title">Title</label>
             <input type="radio" id="title" value="title" name="search">
             <label for="author">author</label>
