--- a/views/pages/searches/new.ejs
+++ b/views/pages/searches/new.ejs
@@ -13,10 +13,10 @@
     <main>
         <form action="/searches" method="post" id="bookForm">
             <label for="title">Title</label>
-            <input type="radio" id="title" value="title" name="search">
+            <input type="checkbox" id="title" value="title" name="search"> <br>
             <label for="author">author</label>
-            <input type="radio" id="author" value="author" name="search">
-            <input type="text" name="inputName">
+            <input type="checkbox" id="author" value="author" name="search"> <br>
+            <input type="text" name="inputName" id="inputId"> <br>
             <button>Search</button>
         </form>
     </main>
