--- a/views/pages/books/show.ejs
+++ b/views/pages/books/show.ejs
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/reset.css">
-    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="/styles/reset.css">
+    <link rel="stylesheet" href="/styles/base.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Book Details</title>
 </head>
@@ -18,6 +18,6 @@
             <%- include('detail.ejs') %>
         </section>
     </main>
-    <script src="js/book.js"></script>
+    <script src="../js/book.js"></script>
 </body>
 </html>
